tests/reject/newtype_agg_mix.hi
# An aggregate newtype stays distinct from its underlying type: a bare
# [int] is not an Ids, even though Ids = [int]. Must be a type error.
# NOTE: hierc rejects this; hierc0 does NOT (it stores zero-cost newtypes as
# their underlying type, so newtype identity is erased at declaration -- a
# documented less-strict limitation, with hierc as the validating oracle).
# Skip-listed in tests/run.sh's hierc0 reject check.
type Ids = [int]

fn total(xs: Ids) -> int:
    return len(to_under(xs))

fn main():
    raw := [1, 2, 3]
    print(str(total(raw)) + "\n")
